tests/NormalTests/paczka1/small_fuzzy/43188198.err
Error in line 5: aUGbImNfY A281 19,7
Error in line 6: aUGbImNfY A893 36,1
Error in line 10: aUGbImNfY A893 30,3
Error in line 12: aUGbImNfY A281 55,5
Error in line 14: aUGbImNfY A893 32,4
